--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.0'
 services:
   application:
     container_name: foodfinder-application
@@ -7,7 +6,7 @@ services:
       - "3000:3000"
     volumes:
       - C:\Users\sugir\code:/home/node/code
-    working_dir: /home/node/code/
+    working_dir: /home/node/code/foodfinder-application
     depends_on:
       - backend
     environment:
@@ -15,6 +14,7 @@ services:
       - CHOKIDAR_USEPOLLING=true
       - CHOKIDAR_INTERVAL=100
     tty: true  
+    command: "npm run dev"
   backend:
     container_name: foodfinder-backend
     image: mongo:latest
