--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,19 @@ services:
     volumes:
       - "C:/Users/sugir/code/.docker/foodfinder-backend/seed-mongodb.js:/docker-entrypoint-initdb.d/seed-mongodb.js"
       - mongodb_data_container:/data/db
+  jest:
+    container_name: foodfinder-jest
+    image: node:lts-alpine
+    working_dir: /home/node/code/foodfinder-application
+    volumes:
+      - C:\Users\sugir\code:/home/node/code
+    depends_on:
+      - backend
+      - application
+    environment:
+      - NODE_ENV=test
+    tty: true
+    command: "npm run testWatch"
 
 volumes:
   mongodb_data_container:
